# git-crypt

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  renovate.json  setup-spec.md  test.sh
.github/hooks/: hooks.json
.github/hooks/postToolUse/: linters.json  main.mjs  main.test.mjs
.github/hooks/postToolUse/lib/: incremental-files.mjs
.github/scripts/: bump-cargo-version.mjs  release-plan.mjs  release-scripts.test.mjs  release-utils.mjs  renovate-config.test.mjs
.github/workflows/: ci.yml  release-assets.yml  release.yml
src/: main.rs
src/tests/: clean_and_smudge.rs  core.rs  encryption_policy.rs  git_filter_process.rs  gitattributes.rs  merge.rs  mod.rs  setup.rs  textconv.rs  util.rs
