[package]
name = "git-crypt"
version = "0.2.7"
edition = "2024"
rust-version = "1.85"

[dependencies]
chrono = "=0.4.44"
clap = { version = "=4.5.61", features = ["derive"] }
colored = "=3.1.1"
git2 = { version = "0.21.0", git = "https://github.com/rust-lang/git2-rs", rev = "33f0a7123084b730bb754900967e7ae7e9d94eb0" }
hex = "=0.4.3"
inquire = "=0.9.4"
log = "=0.4.29"
pgp = "=0.19.0"
rand = "=0.8.6" # pgpで使われているrandのバージョンが0.8.5のため、合わせる必要がある。
regex = "=1.12.3"
similar = "=2.7.0"
stderrlog = "=0.6.0"
sysinfo = { version = "=0.38.2", default-features = false, features = ["system", "windows"] }
thiserror = "=2.0.18"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
tempfile = "=3.26.0"




